debugging invite friends

--- a/inviteFriends.html
+++ b/inviteFriends.html
@@ -17,16 +17,34 @@
 
 </head>
 <body>
-    
-    <nav id="wave" class="uk-navbar-container" uk-navbar>
-        <div class="uk-navbar-left">
-          <p> Sharing is Caring...</p>
+    <nav class="uk-navbar-container" uk-navbar>
+        <div class="uk-navbar" id="navBar1"> <!--Adding an ID for styling in css -->
+          <div class="uk-navbar-left">
+            <img src="https://img.icons8.com/carbon-copy/100/000000/ghost.png"/>
+          </div>
+          <div class="uk-navbar-right">
+            <div class = "uk-navbar-item"></div>
+              <ul class="uk-navbar-nav" id="navBarLinks">
+                <li class="uk-active"><a href="index.html">Home</a></li>
+                <li><a id="createUser" href="#usernameModal">Create an Account</a></li>
+                <li><a href="userGuide.html">User Guide</a></li>
+                <li><a href="challenge.html">Challenge Yourself</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-    </nav>
+      </nav>
+    
 
   <!-- <img src="Develop/Images/friends-1.png" alt="Paris" class="center"> -->
   <div class="sharethis-inline-share-buttons"></div>
-   
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- <script src="Develop/uikit.js"></script> -->
+  <script src="Develop/config.js"></script>
+  <script src="Develop/script.js"></script>
+  <script src="Develop/script2.js"></script>
+  <script></script>
   
 </body>
 </html>
