--- a/challenge.html
+++ b/challenge.html
@@ -42,6 +42,21 @@
       </div>
     </nav>
 
+    <div id="usernameModal" class="modal">
+      <form class="modal-content" action="/action_page.php">
+        <div class="container">
+          <p>Please enter a username.</p>
+          <hr>
+          <label for="username"><b>Username</b></label>
+          <input id="usernameInput" type="text" placeholder="Enter username" name="username">
+          <div class="clearfix">
+            <button type="button" class="cancelbtn">Cancel</button>
+            <button type="button" class="saveUserbtn">Save Username</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
     <h1>Challenge yourself with a Fear-Setting Strategy</h1>
     <p>What is your worst, biggest fear? Help yourself out by diving deep into it.</p>
     <div class = "uk-container">
