changed the InviteFriends to a an a tag instead of a button to debug error

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
 
     <form action="inviteFriends.html" method="get" target="_blank">
-      <button class="uk-button uk-button-default" a href="inviteFriends.html">Share With Friends</button>
+      <a class="uk-button uk-button-default"  href="./inviteFriends.html">Share With Friends</a>
    </form>
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
