--- a/challenge.html
+++ b/challenge.html
@@ -142,7 +142,7 @@
     </div>
 
     <form action="inviteFriends.html" method="get" target="_blank">
-      <button class="uk-button uk-button-default" a href="inviteFriends.html">Share With Friends</button>
+      <a class="uk-button uk-button-default" a href="inviteFriends.html">Share With Friends</a>
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
