--- a/inviteFriends.html
+++ b/inviteFriends.html
@@ -37,7 +37,7 @@
     
 
   <!-- <img src="Develop/Images/friends-1.png" alt="Paris" class="center"> -->
-  <div class="sharethis-inline-share-buttons"></div>
+  <div id="shareButtons" class="sharethis-inline-share-buttons"></div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- <script src="Develop/uikit.js"></script> -->
