--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://cdn.jsdelivr.net/npm/uikit@3.4.0/dist/css/uikit.min.css"
     />
     <link rel="stylesheet" href="Develop/Style/style.css" />
+    <link rel="stylesheet" href="Develop/Style/challenge.css" />
   </head>
   <body>
     <nav class="uk-navbar-container" uk-navbar>
@@ -21,10 +22,10 @@
         <div class="uk-navbar-right">
           <div class = "uk-navbar-item"></div>
             <ul class="uk-navbar-nav" id="navBarLinks">
-              <li><a href="index.html">Home</a></li>
+              <li class="uk-active"><a href="index.html">Home</a></li>
               <li><a id="createUser" href="#usernameModal">Create an Account</a></li>
               <li><a href="userGuide.html">User Guide</a></li>
-              <li class="uk-active"><a href="challenge.html">Challenge Yourself</a></li>
+              <li><a href="challenge.html">Challenge Yourself</a></li>
             </ul>
           </div>
         </div>
@@ -36,10 +37,13 @@
           <ul class="uk-navbar-nav">
             <img  id="adorable-avatar" src ="https://api.adorable.io/avatars/285/abott@adorable.png"   alt="Profile photo" width="100px" height="100px"/>
             <li class="uk-disabled"><a id="user" href=""></a></li>
-            <li class="uk-disabled"><a href="">Level 1</a></li>
-            <li class="uk-disabled"><a href="">Brave Bunny</a></li>
+            <li class="uk-disabled"><a class = "level" href="">Level 1</a></li>
+            <li class="uk-disabled"><a class = "levelName" href="">Brave Bunny</a></li>
           </ul>
-          <progress class="uk-progress" value="5" max="100"></progress>
+          <!-- <progress class="uk-progress" value="0" max="100"></progress> -->
+          <div id="myProgress">
+            <div id="myBar"></div>
+          </div>
         </div>
       </div>
     </nav>
@@ -117,7 +121,6 @@
   <script src="Develop/config.js"></script>
   <script src="Develop/script.js"></script>
   <script src="Develop/script2.js"></script>
-  <script></script>
   </body>
 </html>
 
