adding design, colors, etc

--- a/userGuide.html
+++ b/userGuide.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fear Setting</title>
     <link rel="stylesheet" href="Develop/Style/normalize.css" />   
-    <link rel="stylesheet" href="Develop/Style/style.css" />
+    <link rel="stylesheet" href="Develop/Style/friends.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/uikit@3.4.0/dist/css/uikit.min.css"
@@ -31,34 +31,26 @@
           </div>
         </div>
       </nav>
-      <nav class="uk-navbar-container" uk-navbar>
-         <div class="uk-navbar" id="navBar2"> <!--Adding an ID for styling in css -->
-          <div class = "uk-navbar-center">
-            <ul class="uk-navbar-nav">
-              <img id="adorable-avatar" src ="https://api.adorable.io/avatars/285/abott@adorable.png"   alt="Profile photo" width="100px" height="100px"/>
-              <li class="uk-disabled"><a id="user" href=""></a></li>
-              <li class="uk-disabled"><a href="">Level 1</a></li>
-              <li class="uk-disabled"><a href="">Brave Bunny</a></li>
-            </ul>
-            <progress class="uk-progress" value="5" max="100"></progress>
-          </div>
-        </div>
-      </nav>
+
    
    
    
-      "The world would be a much better place if everyone of us faced our fears" -Anonymous
+     <p>"The world would be a much better place if everyone of us faced our fears" -Anonymous</p> 
 
 
-   <p> A User Guide Adopted From Tim Ferris and Sorelle Amore</p>
-    <div>
-        <p>
+   <!-- <p style="text-align:left"> A User Guide Adopted From Tim Ferris and Sorelle Amore</p> -->
+    <div id="userGuidelist">
+      <p style="text-align:left"> 1. Define your nightmare/ fear. </p>
+      <p style="text-align:left"> 2. Figure out ways to overcome fear. </p>
+      <P style="text-align:left"> 3. Keep track of fears you have overcome.</P>
+      <p style="text-align:left"> 4. Get rewarded by a funny and positive gif and quote for every fear conquered.</p>
+        <!-- <p>
             1. Define your nightmare, the absolute worst that could happen if you did what you are considering. What doubt, fears, and “what-ifs” pop up as you consider the big changes you can—or need—to make? Envision them in painstaking detail. Would it be the end of your life? What would be the permanent impact, if any, on a scale of 1–10? Are these things really permanent? How likely do you think it is that they would actually happen?
         </p>
         <p>
             2. What steps could you take to repair the damage or get things back on the upswing, even if temporarily? Chances are, it’s easier than you imagine. How could you get things back under control?
-        </p>
-        <p>
+        </p> -->
+        <!-- <p>
             3. What are the outcomes or benefits, both temporary and permanent, of more probable scenarios? Now that you’ve defined the nightmare, what are the more probable or definite positive outcomes, whether internal (confidence, self-esteem, etc.) or external? What would the impact of these more likely outcomes be on a scale of 1–10? How likely is it that you could produce at least a moderately good outcome? Have less intelligent people done this before and pulled it off?
         </p>
         <p>
@@ -72,7 +64,7 @@
         </p>
         <p>
             7. What are you waiting for? If you cannot answer this without resorting to the previously rejected concept of good timing, the answer is simple: You’re afraid, just like the rest of the world. Measure the cost of inaction, realize the unlikelihood and repair-ability of most missteps, and develop the most important habit of those who excel and enjoy doing so: action
-        </p>
+        </p> -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
