design, changing colors of buttons, avatars, background images, updated user guide

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        <div class="uk-navbar" id="navBar2"> <!--Adding an ID for styling in css -->
         <div class = "uk-navbar-center">
           <ul class="uk-navbar-nav">
-            <img  id="adorable-avatar" src ="https://api.adorable.io/avatars/285/abott@adorable.png"   alt="Profile photo" width="100px" height="100px"/>
+            <img  class="adorable-avatar" src ="https://api.adorable.io/avatars/285/kurtgerm"   alt="Profile photo" width="100px" height="100px"/>
             <li class="uk-disabled"><a id="user" href=""></a></li>
             <li class="uk-disabled"><a class = "level" href="">Level 1</a></li>
             <li class="uk-disabled"><a class = "levelName" href="">Brave Bunny</a></li>
