--- a/inviteFriends.html
+++ b/inviteFriends.html
@@ -38,6 +38,8 @@
 
   <!-- <img src="Develop/Images/friends-1.png" alt="Paris" class="center"> -->
   <div id="shareButtons" class="sharethis-inline-share-buttons"></div>
+
+  <div> Share your progress with your favorite social media website!</div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- <script src="Develop/uikit.js"></script> -->
