Styled modal buttons, added modal to user guide.

--- a/challenge.html
+++ b/challenge.html
@@ -39,8 +39,8 @@
           <label for="username"><b>Username</b></label>
           <input id="usernameInput" type="text" placeholder="Enter username" name="username">
           <div class="clearfix">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <button type="button" class="saveUserbtn">Save Username</button>
+            <button type="button" class="cancelbtn uk-button">Cancel</button>
+            <button type="button" class="saveUserbtn uk-button">Save Username</button>
           </div>
         </div>
       </form>
