--- a/userGuide.html
+++ b/userGuide.html
@@ -31,7 +31,20 @@
           </div>
         </div>
       </nav>
-
+      <div id="usernameModal" class="modal">
+        <form class="modal-content" action="/action_page.php">
+          <div class="container">
+            <p>Please enter a username.</p>
+            <hr>
+            <label for="username"><b>Username</b></label>
+            <input id="usernameInput" type="text" placeholder="Enter username" name="username">
+            <div class="clearfix">
+              <button type="button" class="cancelbtn uk-button">Cancel</button>
+              <button type="button" class="saveUserbtn uk-button">Save Username</button>
+            </div>
+          </div>
+        </form>
+      </div>
    
    
    
@@ -78,6 +91,6 @@
     <script src="Develop/config.js"></script>
     <script src="Develop/script.js"></script>
     <script src="Develop/script2.js"></script>
-    <script src="Develop/script.js"></script>
+    <!-- <script src="Develop/script.js"></script> -->
 </body>
 </html>
