switched link in userguide

--- a/userGuide.html
+++ b/userGuide.html
@@ -22,9 +22,9 @@
           <div class="uk-navbar-right">
             <div class = "uk-navbar-item"></div>
               <ul class="uk-navbar-nav" id="navBarLinks">
-                <li class="uk-active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a id="createUser" href="#usernameModal">Create an Account</a></li>
-                <li><a href="userGuide.html">User Guide</a></li>
+                <li class="uk-active"><a href="userGuide.html">User Guide</a></li>
                 <li><a href="challenge.html">Challenge Yourself</a></li>
               </ul>
             </div>
